--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,11 +226,9 @@ jobs:
           # - rust: nightly
           #   target: riscv64gc-unknown-linux-gnu
           #   flags: -Z codegen-backend=cranelift
-          - rust: nightly-2023-08-24 # Rust 1.74, LLVM 17 (oldest version we can use asm_experimental_arch on this target)
-            target: s390x-unknown-linux-gnu
-          - rust: nightly-2024-01-04 # Rust 1.77, LLVM 17 (last version that does not support reg_addr register class)
-            target: s390x-unknown-linux-gnu
-          - rust: nightly-2024-01-05 # Rust 1.77, LLVM 17 (oldest version that supports reg_addr register class)
+          # - rust: '1.84' # LLVM 19 (oldest stable version we can use asm on this target)
+          #   target: s390x-unknown-linux-gnu
+          - rust: nightly-2024-01-05 # Rust 1.77, LLVM 17 (oldest version we can use asm_experimental_arch on this target)
             target: s390x-unknown-linux-gnu
           - rust: nightly
             target: s390x-unknown-linux-gnu
