--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,7 @@ updates:
     ignore:
       # For test on old rustc.
       - dependency-name: crossbeam-utils
+      - dependency-name: libc
     labels: []
     groups:
       cargo:
