--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ fastrand = "2"
 paste = "1"
 quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + https://github.com/BurntSushi/quickcheck/pull/296 + lower MSRV
 
+[target.'cfg(unix)'.dev-dependencies]
+libc = "=0.2.163" # newer libc requires Rust 1.63
+
 [lints]
 workspace = true
 
