--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -405,7 +405,7 @@ jobs:
           - stable
           - nightly-2023-08-24 # Rust 1.74, LLVM 17 (oldest version that MaybeUninit register is supported)
           - nightly
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 60
     steps:
       - uses: taiki-e/checkout-action@v1
@@ -435,6 +435,8 @@ jobs:
             apt_packages+=(
               avr-libc
               gcc-avr
+              gcc-m68k-linux-gnu
+              libc6-dev-m68k-cross
               qemu-system-sparc
               simavr
             )
@@ -470,6 +472,13 @@ jobs:
                 | tar xzf - --strip-components 1 -C "${HOME}"/tsim
               printf '%s\n' "${HOME}"/tsim/tsim/linux-x64 >>"${GITHUB_PATH}"
             fi
+            # https://github.com/taiki-e/dockerfiles/pkgs/container/qemu-user
+            retry docker create --name qemu-user ghcr.io/taiki-e/qemu-user
+            mkdir -p -- qemu-user
+            docker cp -- qemu-user:/usr/bin qemu-user/bin
+            docker rm -f -- qemu-user >/dev/null
+            sudo mv -- qemu-user/bin/qemu-* /usr/bin/
+            rm -rf -- ./qemu-user
           elif [[ "${{ matrix.rust }}" == "stable" ]]; then
             retry espup install --targets esp32,esp32s2,esp32s3
           fi
