--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     # See atomic_maybe_uninit_no_cmpxchg8b for details.
     'cfg(atomic_maybe_uninit_no_cmpxchg)',
 ] }
+unnameable_types = "warn"
 unreachable_pub = "warn"
 # unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
 [workspace.lints.clippy]
