--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "atomic-maybe-uninit"
 version = "0.3.6" #publish:version
 edition = "2021"
-rust-version = "1.59"
+rust-version = "1.59" # For asm!
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/taiki-e/atomic-maybe-uninit"
 keywords = ["atomic"]
