--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,10 @@ doc-scrape-examples = false
 
 [dev-dependencies]
 build-context = "0.1"
-crossbeam-utils = "=0.8.16" # The latest crossbeam-utils requires Rust 1.60
+crossbeam-utils = { version = "0.8", git = "https://github.com/crossbeam-rs/crossbeam.git", rev = "17fb8417a83a2694b6f8a37198cd20b34b621baf" } # The latest released crossbeam-utils requires Rust 1.60
 fastrand = "2"
 paste = "1"
-quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + https://github.com/BurntSushi/quickcheck/pull/296 + lower MSRV
+quickcheck = { version = "1", default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + https://github.com/BurntSushi/quickcheck/pull/296 + f16/f128 support + lower MSRV
 
 [target.'cfg(unix)'.dev-dependencies]
 libc = "=0.2.163" # newer libc requires Rust 1.63
