--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,10 +92,13 @@ jobs:
             flags: -Z codegen-backend=cranelift
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
             target: aarch64_be-unknown-linux-gnu
+            os: ubuntu-22.04
           - rust: nightly-2023-08-24 # Rust 1.74, LLVM 17 (oldest version that MaybeUninit register is supported)
             target: aarch64_be-unknown-linux-gnu
+            os: ubuntu-22.04
           - rust: nightly-2024-11-07 # TODO: https://github.com/BurntSushi/memchr/pull/162
             target: aarch64_be-unknown-linux-gnu
+            os: ubuntu-22.04
           - rust: '1.59' # LLVM 13
             target: armv5te-unknown-linux-gnueabi
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
@@ -130,10 +133,13 @@ jobs:
             target: armv7-unknown-linux-gnueabihf
           - rust: nightly-2022-09-16 # Rust 1.65, LLVM 15 (version that this target was added)
             target: armeb-unknown-linux-gnueabi
+            os: ubuntu-22.04
           - rust: nightly-2023-08-24 # Rust 1.74, LLVM 17 (oldest version that MaybeUninit register is supported)
             target: armeb-unknown-linux-gnueabi
+            os: ubuntu-22.04
           - rust: nightly
             target: armeb-unknown-linux-gnueabi
+            os: ubuntu-22.04
           - rust: '1.59' # LLVM 13
             target: i586-unknown-linux-gnu
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
