ci: Pin nightly toolchain for Arm on QEMU and SPARC tests
```
test tests::test_atomic_i64::quickcheck_load_store ... ok
qemu: uncaught target signal 4 (Illegal instruction) - core dumped
error: test failed, to rerun pass `--lib`

Caused by:
  process didn't exit successfully: `CARGO=/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo CARGO_MANIFEST_DIR=/home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit CARGO_MANIFEST_PATH=/home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit/Cargo.toml CARGO_PKG_AUTHORS='' CARGO_PKG_DESCRIPTION='Atomic operations on potentially uninitialized integers.
  ' CARGO_PKG_HOMEPAGE='' CARGO_PKG_LICENSE='Apache-2.0 OR MIT' CARGO_PKG_LICENSE_FILE='' CARGO_PKG_NAME=atomic-maybe-uninit CARGO_PKG_README=README.md CARGO_PKG_REPOSITORY='https://github.com/taiki-e/atomic-maybe-uninit' CARGO_PKG_RUST_VERSION=1.59 CARGO_PKG_VERSION=0.3.6 CARGO_PKG_VERSION_MAJOR=0 CARGO_PKG_VERSION_MINOR=3 CARGO_PKG_VERSION_PATCH=6 CARGO_PKG_VERSION_PRE='' LD_LIBRARY_PATH='/home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit/target/armv7-unknown-linux-gnueabi/release/deps:/home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit/target/armv7-unknown-linux-gnueabi/release:/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/armv7-unknown-linux-gnueabi/lib:/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib' OUT_DIR=/home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit/target/armv7-unknown-linux-gnueabi/release/build/atomic-maybe-uninit-4185da05863e8982/out qemu-arm /home/runner/work/atomic-maybe-uninit/atomic-maybe-uninit/target/armv7-unknown-linux-gnueabi/release/deps/atomic_maybe_uninit-b5ac4224860d4abd` (signal: 4, SIGILL: illegal instruction)
++ s=101
++ printf '%s\n' 'test.sh:16: `"$@"` exit with 101'
test.sh:16: `"$@"` exit with 101
++ exit 101
test.sh:17: `( set -x; "$@" )` exit with 101
test tests::test_atomic_i64::quickcheck_swap ...
```

```
rustc-LLVM ERROR: Not supported ins

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,7 +174,7 @@ jobs:
             target: arm-unknown-linux-gnueabi
           # - rust: beta
           #   target: arm-unknown-linux-gnueabi
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: arm-unknown-linux-gnueabi
           # ------------------------------------------------------------
           # armv7-unknown-linux-gnueabi
@@ -188,7 +188,7 @@ jobs:
             target: armv7-unknown-linux-gnueabi
           # - rust: beta
           #   target: armv7-unknown-linux-gnueabi
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: armv7-unknown-linux-gnueabi
           # ------------------------------------------------------------
           # armv7-unknown-linux-gnueabihf
@@ -210,7 +210,7 @@ jobs:
           - rust: nightly
             target: armv7-unknown-linux-gnueabihf
             os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: armv7-unknown-linux-gnueabihf
             os: ubuntu-latest # QEMU on x86_64
           # ------------------------------------------------------------
@@ -224,7 +224,7 @@ jobs:
           # - rust: nightly-2024-07-31 # Rust 1.82, LLVM 18
           #   target: armeb-unknown-linux-gnueabi
           #   os: ubuntu-22.04
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: armeb-unknown-linux-gnueabi
             os: ubuntu-22.04
           # ------------------------------------------------------------
@@ -407,7 +407,7 @@ jobs:
           # sparc64-unknown-linux-gnu
           - rust: nightly-2024-11-08 # Rust 1.84, LLVM 19 (oldest version we can use asm_experimental_arch on this target)
             target: sparc64-unknown-linux-gnu
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: "rustc-LLVM ERROR: Not supported instr: <MCInst 11 <MCOperand Reg:162>>" with LLVM 20
             target: sparc64-unknown-linux-gnu
           # ------------------------------------------------------------
           # thumbv7neon-unknown-linux-gnueabihf
@@ -429,7 +429,7 @@ jobs:
           - rust: nightly
             target: thumbv7neon-unknown-linux-gnueabihf
             os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
-          - rust: nightly
+          - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: thumbv7neon-unknown-linux-gnueabihf
             os: ubuntu-latest # QEMU on x86_64
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
