--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,28 +91,28 @@ jobs:
           # aarch64-unknown-linux-gnu
           - rust: '1.59' # LLVM 13
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           # - rust: '1.81' # LLVM 18
           #   target: aarch64-unknown-linux-gnu
-          #   os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+          #   os: ubuntu-24.04-arm
           - rust: stable
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: beta
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: nightly
             target: aarch64-unknown-linux-gnu
             os: ubuntu-latest # QEMU on x86_64
           - rust: nightly
             target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
             flags: -Z codegen-backend=cranelift
           # ------------------------------------------------------------
           # aarch64-apple-darwin
@@ -194,22 +194,22 @@ jobs:
           # armv7-unknown-linux-gnueabihf
           - rust: '1.59' # LLVM 13
             target: armv7-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
             target: armv7-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           # - rust: '1.81' # LLVM 18
           #   target: armv7-unknown-linux-gnueabihf
-          #   os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+          #   os: ubuntu-24.04-arm
           - rust: stable
             target: armv7-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           # - rust: beta
           #   target: armv7-unknown-linux-gnueabihf
-          #   os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+          #   os: ubuntu-24.04-arm
           - rust: nightly
             target: armv7-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: armv7-unknown-linux-gnueabihf
             os: ubuntu-latest # QEMU on x86_64
@@ -413,22 +413,22 @@ jobs:
           # thumbv7neon-unknown-linux-gnueabihf
           - rust: '1.59' # LLVM 13
             target: thumbv7neon-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
             target: thumbv7neon-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           # - rust: '1.81' # LLVM 18
           #   target: thumbv7neon-unknown-linux-gnueabihf
-          #   os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+          #   os: ubuntu-24.04-arm
           - rust: stable
             target: thumbv7neon-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           # - rust: beta
           #   target: thumbv7neon-unknown-linux-gnueabihf
-          #   os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+          #   os: ubuntu-24.04-arm
           - rust: nightly
             target: thumbv7neon-unknown-linux-gnueabihf
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
           - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: thumbv7neon-unknown-linux-gnueabihf
             os: ubuntu-latest # QEMU on x86_64
@@ -722,7 +722,7 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
           - target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm # TODO: update to 24.04 when https://github.com/rust-lang/rust/issues/135867 solved
+            os: ubuntu-24.04-arm
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     timeout-minutes: 60
     steps:
