--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(target_pointer_width,values("128"))',
     # Known custom cfgs, excluding those that may be set by build script.
     # Not public API.
-    'cfg(qemu,valgrind)',
+    'cfg(atomic_maybe_uninit_test_prefer_zalrsc_over_zaamo,qemu,valgrind)',
     # Public APIs, considered unstable unless documented in readme.
     # arm: Use cp15_barrier instead of __kuser_memory_barrier on Armv6 Linux/Android.
     # Armv6 binaries compiled with this cfg may cause problems when run on Armv7+ chips:
