--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -561,11 +561,11 @@ jobs:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-cpu=pwr8
           RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-cpu=pwr8
         if: startsWith(matrix.target, 'powerpc64-')
-      # riscv +zabha
+      # riscv +zabha,+zacas
       - run: tools/test.sh -vv --tests ${TARGET:-} ${BUILD_STD:-} ${RELEASE:-}
         env:
-          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+zabha
-          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+zabha
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+zabha,+zacas
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+zabha,+zacas
           QEMU_CPU: max
         if: startsWith(matrix.target, 'riscv')
       # s390x z196 (arch9)
